--- a/Html-practice/Html-CSS.css
+++ b/Html-practice/Html-CSS.css
@@ -1,9 +1,19 @@
-h2{
+h2 {
     color: blueviolet;
     background-color: antiquewhite;
 }
 
-h3{
-    color: chartreuse;
+h3 {
+    color: antiquewhite;
+    background-color: aquamarine;
+}
+
+h1 {
+    color: blueviolet;
+    background-color: antiquewhite;
+}
+
+h4 {
+    color: blue;
     background-color: aquamarine;
 }
