--- a/CG-REACT-DEMO/cg-react-demo/src/App.css
+++ b/CG-REACT-DEMO/cg-react-demo/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+/* .mine{
+  background-image: "https://media.istockphoto.com/photos/bohemian-living-room-interior-3d-render-picture-id1182454657?k=20&m=1182454657&s=612x612&w=0&h=1xEsm7BqeicA8jYk9KlerUtGsAgzzo530l5Ak1HJdnc=";
+} */
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
