--- a/Html-Css-webpage/WelcomePage.css
+++ b/Html-Css-webpage/WelcomePage.css
@@ -7,7 +7,7 @@
 .main {
     width: 100%;
     height: 100vh;
-    background-image: url(../images/background3.jpg);
+    background-image: url(../images/background6.png);
     background-size: cover;
     background-position: center;
     position: relative;
